--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "main": "src/server.js",
   "scripts": {
     "build": "babel-node tools/run build",
+    "copy": "babel-node tools/run copy",
     "eslint": "eslint src tools",
     "serve": "babel-node tools/serve",
     "start": "babel-node tools/run start",
@@ -28,24 +29,28 @@
   "dependencies": {
     "babel-polyfill": "^6.7.4",
     "babel-register": "^6.7.2",
+    "bluebird": "^3.3.4",
     "dateformat": "^1.0.12",
-    "flux": "^2.1.1",
     "good": "^6.6.0",
     "good-console": "^5.3.1",
-    "hapi": "^13.2.2",
+    "hapi": "^13.3.0",
     "handlebars": "^4.0.5",
+    "i18next": "^2.4.1",
+    "i18next-node-fs-backend": "^0.1.2",
     "inert": "^3.2.0",
     "isomorphic-style-loader": "^0.0.12",
-    "react": "^0.14.8",
-    "react-dom": "^0.14.8",
+    "react": "^15.0.0",
+    "react-dom": "^15.0.0",
     "react-helmet": "^3.0.0",
+    "react-i18next": "^1.3.0",
     "react-redux": "^4.4.1",
     "react-router": "^2.0.1",
     "react-router-redux": "^4.0.0",
     "redux": "^3.3.1",
     "redux-thunk": "^2.0.1",
-    "superagent": "^1.6.1",
-    "vision": "^4.0.1"
+    "serialize-javascript": "^1.2.0",
+    "superagent": "^1.8.3",
+    "vision": "^4.1.0"
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.4.0",
@@ -70,7 +75,9 @@
     "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^4.2.0",
     "extend": "^3.0.0",
+    "gaze": "^1.0.0",
     "json-loader": "^0.5.4",
+    "ncp": "^2.0.0",
     "node-sass": "^3.4.2",
     "postcss": "^5.0.19",
     "postcss-import": "^8.0.2",
