--- a/package.json
+++ b/package.json
@@ -83,6 +83,9 @@
     "postcss-import": "^8.0.2",
     "postcss-loader": "^0.8.1",
     "postcss-scss": "^0.1.7",
+    "react-transform-catch-errors": "^1.0.2",
+    "react-transform-hmr": "^1.0.4",
+    "redbox-react": "^1.2.3",
     "sass-loader": "^3.2.0",
     "webpack": "^1.12.14",
     "webpack-hot-middleware": "^2.10.0",
