--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "babel-polyfill": "^6.7.4",
     "babel-register": "^6.7.2",
     "bluebird": "^3.3.4",
+    "bootstrap": "^3.3.6",
+    "bootstrap-sass": "^3.3.5",
     "dateformat": "^1.0.12",
     "good": "^6.6.0",
     "good-console": "^5.3.1",
@@ -38,7 +40,7 @@
     "i18next": "^2.4.1",
     "i18next-node-fs-backend": "^0.1.2",
     "inert": "^3.2.0",
-    "isomorphic-style-loader": "^0.0.12",
+    "isomorphic-fetch": "^2.2.1",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
     "react-helmet": "^3.0.0",
@@ -66,6 +68,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.6.5",
+    "bootstrap-loader": "^1.0.10",
     "browser-sync": "^2.11.1",
     "browser-sync-webpack-plugin": "^1.0.1",
     "css-loader": "^0.23.1",
@@ -75,6 +78,8 @@
     "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^4.2.0",
     "extend": "^3.0.0",
+    "file-loader": "^0.8.5",
+    "extract-text-webpack-plugin": "^1.0.1",
     "gaze": "^1.0.0",
     "json-loader": "^0.5.4",
     "ncp": "^2.0.0",
@@ -86,9 +91,13 @@
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.2.3",
+    "resolve-url-loader": "^1.4.3",
     "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
     "webpack-hot-middleware": "^2.10.0",
+    "webpack-isomorphic-tools": "^2.2.46",
     "webpack-middleware": "^1.5.1"
   }
 }
